--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -9,18 +9,19 @@ volumes:
 
 services:
           usersdb:
-                  image: postgres
+                  image: postgres:16.2
                   container_name: db-users
                   restart: always
+                  shm_size: 128mb
                   volumes:
-                    - "users-postgres:/data/db"
+                    - "users-postgres:/var/lib/postgresql/data"
                   networks:
                     - "app-network"
                   environment:
                     POSTGRES_PASSWORD: 
                     POSTGRES_USER: 
                   ports:
-                    - "8080:8080"
+                    - "5432:5432"
                     
           app:
                   build:
