fix: adicionado ao dockerfile para copiar os arquivos do prisma

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 JWT_SECRET="ISHAU#*!#(!)#!_--1-SHhhsss_102901_*$(#&#!)@!)@12_"
-DATABASE_URL="postgresql://postgres:123@localhost/mydb?schema=public"
+DATABASE_URL="postgresql://user:pass@usersdb:5432//db?schema=public"
