fix: ao iniciar o container do postgres, é rodado os SQLs na pasta SQL/init.sql

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -15,6 +15,7 @@ services:
                   shm_size: 128mb
                   volumes:
                     - "users-postgres:/var/lib/postgresql/data"
+                    - "./sql:/docker-entrypoint-initdb.d"
                   networks:
                     - "app-network"
                   environment:
