Fix: add variaveis de ambiente no dockercompose

--- a/.env
+++ b/.env
@@ -1,2 +1,10 @@
+#JWT
 JWT_SECRET="ISHAU#*!#(!)#!_--1-SHhhsss_102901_*$(#&#!)@!)@12_"
-DATABASE_URL="postgresql://user:pass@usersdb:5432//db?schema=public"
+
+#POSTGRES
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=password
+POSTGRES_DB=postgres
+
+# Segue o padrão "postgresql://<USER>:<PASSWORD>@<CONTAINER_DB>:<PORT>/<DATABASE>?schema=public"
+DATABASE_URL="postgresql://postgres:password@usersdb:5432/postgres?schema=public"
