--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -19,8 +19,11 @@ services:
                   networks:
                     - "app-network"
                   environment:
-                    POSTGRES_PASSWORD: 
-                    POSTGRES_USER: 
+                    POSTGRES_USER: ${POSTGRES_USER}
+                    POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+                    POSTGRES_DB: ${POSTGRES_DB}
+                  env_file:
+                    - .env
                   ports:
                     - "5432:5432"
                     
