fix: add await on all methods

--- a/.env
+++ b/.env
@@ -7,4 +7,4 @@ POSTGRES_PASSWORD=password
 POSTGRES_DB=postgres
 
 # Segue o padrão "postgresql://<USER>:<PASSWORD>@<CONTAINER_DB>:<PORT>/<DATABASE>?schema=public"
-DATABASE_URL="postgresql://postgres:password@usersdb:5432/postgres?schema=public"
+DATABASE_URL="postgresql://postgres:123@localhost:5432/mydb?schema=public"
