Fix: Solucionado os erros descritos (#13)
* fix: modificado o método para patch do update e o delete retornando json

* fix: add await on all methods

* fix: add limit characters and name is only letter now

* fix: todas as descrições são em inglês agora e adicionado as verificações

* fix: criado o interceptor que verifica o content-type da requisição

* fix: adicionado o interceptor no module global

* fix: tranferindo a lógica para o service e encriptando a senha no update

* fix: add await on the comparePassword function

* fix: mudança no name pra aceitar espaços e acentos

* fix: mudança no regex do name

* fix: mudança na verificação do email

* fix: criado o decorator checkJson, para verificar o content-type de cada metodo separado

* fix: mudança no regex do nome, agora ele precisa de pelo menos um alfabetico

* fix: adicionado um if no findbyEmail pra verificar se existe email no body

--- a/.env
+++ b/.env
@@ -3,8 +3,8 @@ JWT_SECRET="ISHAU#*!#(!)#!_--1-SHhhsss_102901_*$(#&#!)@!)@12_"
 
 #POSTGRES
 POSTGRES_USER=postgres
-POSTGRES_PASSWORD=password
-POSTGRES_DB=postgres
+POSTGRES_PASSWORD=123
+POSTGRES_DB=mydb
 
 # Segue o padrão "postgresql://<USER>:<PASSWORD>@<CONTAINER_DB>:<PORT>/<DATABASE>?schema=public"
-DATABASE_URL="postgresql://postgres:password@usersdb:5432/postgres?schema=public"
+DATABASE_URL="postgresql://postgres:123@localhost:5432/mydb?schema=public"
