add true/false on the secure httponly

--- a/.env
+++ b/.env
@@ -8,3 +8,6 @@ POSTGRES_DB=mydb
 
 # Segue o padrão "postgresql://<USER>:<PASSWORD>@<CONTAINER_DB>:<PORT>/<DATABASE>?schema=public"
 DATABASE_URL="postgresql://postgres:123@localhost:5432/mydb?schema=public"
+
+# Define o secure do httponly
+NODE_ENV=development
