chore: update dockerfile and docker-compose
Add dockerfile for production and development environment, using multistage building;
Solved #11 by new command on package.json to run prisma migrate;
Changed containers images to alpine to reduce container size

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,1 +1,19 @@
-node_modules/
+**/node_modules/
+**/dist
+npm-debug.log
+.coverage
+.coverage.*
+
+
+.git/
+.github/
+.env
+.env.*
+.aws
+.gitignore
+
+README.md
+LICENSE
+
+dockerfile-app
+docker-compose.yaml
