chore: refactor on docker-compose

--- a/.env.template
+++ b/.env.template
@@ -12,9 +12,9 @@ POSTGRES_DB=postgres
 # The URL to connect to your database
 # postgresql://<USER>:<PASSWORD>@<CONTAINER_DB>:<PORT>/<DATABASE>?schema=public
 # Example
-# postgresql://postgres:postgres@usersdb:5432/postgres?schema=public
+# postgresql://postgres:postgres@postgres:5432/postgres?schema=public
 # You have to make sure that the SAME credentials and db in the URL are in the POSTGRES_USER, POSTGRES_PASSWORD, POSTGRES_DB variables above
-DATABASE_URL="postgresql://postgres:postgres@usersdb:5432/postgres?schema=public"
+DATABASE_URL="postgresql://postgres:postgres@postgres:5432/postgres?schema=public"
 
 # Define the httponly secure
 # development/production/qa
