chore: refactoring Dockerfile and docker-compose

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,19 +1,21 @@
+Dockerfile.dev
+Dockerfile.prod
+docker-compose.yaml
+.dockerignore
+
 **/node_modules/
 **/dist
+
+**/.next
 npm-debug.log
 .coverage
 .coverage.*
-
-
-.git/
-.github/
 .env
-.env.*
 .aws
-.gitignore
+next-env.d.ts
 
+.git
+**/.github
+.gitignore
 README.md
 LICENSE
-
-dockerfile-app
-docker-compose.yaml
