--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -5,19 +5,24 @@ WORKDIR /app
 COPY package*.json ./
 COPY src/prisma ./prisma/
 
-ENV NODE_ENV=development
-RUN npm install
+ENV NODE_ENV development
+RUN npm ci
 
 COPY . .
 RUN npm run build
 
-FROM node:20.11.1-alpine AS dev
+FROM builder AS dev
+WORKDIR /app
 
-COPY --from=builder /app/node_modules ./node_modules
-COPY --from=builder /app/package*.json ./
-COPY --from=builder /app/dist ./dist
-COPY --from=builder /app/prisma ./prisma
+RUN addgroup -g 1001 -S production
+RUN adduser -S backend -u 1001
+USER backend
+  
+COPY --from=builder --chown=backend:production /app/node_modules ./node_modules
+COPY --from=builder --chown=backend:production /app/package*.json ./
+COPY --from=builder --chown=backend:production /app/dist ./dist
+COPY --from=builder --chown=backend:production /app/prisma ./prisma
 
 EXPOSE 3000
 
-CMD ["npm", "run", "start:migrate:dev"]
+CMD ["npm", "run", "start:docker"]
