--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,6 +1,6 @@
-version: "3.7"
-
 networks:
+  db-network:
+    driver: bridge
   docunder-network:
     driver: bridge
 
@@ -8,35 +8,59 @@ volumes:
   users-postgres:
 
 services:
-          postgres:
-                  image: postgres:16.2-alpine3.19
-                  container_name: docunder-db
-                  restart: always
-                  shm_size: 128mb
-                  volumes:
-                    - "users-postgres:/var/lib/postgresql/data"
-                  networks:
-                    - docunder-network
-                  environment:
-                    POSTGRES_USER: ${POSTGRES_USER}
-                    POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
-                    POSTGRES_DB: ${POSTGRES_DB}
-                  ports:
-                    - 5432:5432
-                    
-          backend:
-                  build:
-                      context: "./"
-                      dockerfile: Dockerfile.prod
-                  container_name: docunder-backend
-                  restart: always
-                  networks:
-                    - docunder-network
-                  ports:
-                    - 3000:3000
-                  depends_on:
-                    - postgres
-                  
+  postgres:
+    image: postgres:16.2-alpine3.19
+    container_name: docunder-db
+    restart: always
+    shm_size: 128mb
+    volumes:
+      - "users-postgres:/var/lib/postgresql/data"
+    networks:
+      - db-network
+    environment:
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_DB: ${POSTGRES_DB}
+    healthcheck:
+      test: "pg_isready -U ${POSTGRES_USER} -d ${POSTGRES_DB}"
+      interval: 30s
+      timeout: 60s
+      retries: 5
+      start_period: 80s  
+    ports:
+      - ${DB_PORT}:5432
+            
+  backend:
+    build:
+        context: "./"
+        dockerfile: Dockerfile.dev
+    container_name: docunder-backend
+    restart: always
+    networks:
+      - docunder-network
+      - db-network
+    environment:
+      DATABASE_URL: "postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${DB_HOST}:${DB_PORT}/${POSTGRES_DB}?schema=public"
+      JWT_SECRET: ${JWT_SECRET}
+      NODE_ENV: ${NODE_ENV}
+    ports:
+      - 3000:3000
+      - 5555:5555
+    depends_on:
+      - postgres
+
+  frontend:
+    build:
+        context: "../frontend-app/"
+        dockerfile: Dockerfile.dev
+    container_name: docunder-frontend
+    restart: always
+    networks:
+      - docunder-network
+    ports:
+      - 3001:3001
+    depends_on:
+      - backend
                     
 
                           
