--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
-    "start:migrate:prod": "prisma migrate deploy && npm run start:prod",
-    "start:migrate:dev": "prisma migrate deploy && npm run start",
+    "start:docker": "prisma generate && prisma migrate deploy && node dist/src/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
