--- a/.dockerignore
+++ b/.dockerignore
@@ -1,1 +1,21 @@
-node_modules/
+Dockerfile.dev
+Dockerfile.prod
+docker-compose.yaml
+.dockerignore
+
+**/node_modules/
+**/dist
+
+**/.next
+npm-debug.log
+.coverage
+.coverage.*
+.env
+.aws
+next-env.d.ts
+
+.git
+**/.github
+.gitignore
+README.md
+LICENSE
