--- a/.env.template
+++ b/.env.template
@@ -4,18 +4,24 @@
 # Never share this key publicly and keep it secure.
 JWT_SECRET="your_super_secret_and_long_key"
 
-#POSTGRES
+# Postgres credentials.
+# Those will be used to acess the database.
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres
 POSTGRES_DB=postgres
 
-# The URL to connect to your database
-# postgresql://<USER>:<PASSWORD>@<CONTAINER_DB>:<PORT>/<DATABASE>?schema=public
-# Example
-# postgresql://postgres:postgres@usersdb:5432/postgres?schema=public
-# You have to make sure that the SAME credentials and db in the URL are in the POSTGRES_USER, POSTGRES_PASSWORD, POSTGRES_DB variables above
-DATABASE_URL="postgresql://postgres:postgres@usersdb:5432/postgres?schema=public"
+# WHERE THE DB IS HOSTED
+# If you are using Docker, here you put the name of the container
+# In docker-compose, the container name is "postgres"
+# If you're running locally, use localhost
+DB_HOST=postgres
+DB_PORT=5432
 
-# Define the httponly secure
-# development/production/qa
+# Define the current environment
+# It impacts on the httponly secure
+# Options are development or production
 NODE_ENV=development
+
+
+# DONT CHANGE
+DATABASE_URL=postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${DB_HOST}:${DB_PORT}/${POSTGRES_DB}?schema=public
