--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,45 +1,69 @@
-version: "3.7"
-
 networks:
-  app-network:
+  db-network:
+    driver: bridge
+  docunder-network:
     driver: bridge
 
 volumes:
   users-postgres:
 
 services:
-          usersdb:
-                  image: postgres:16.2
-                  container_name: db-users
-                  restart: always
-                  shm_size: 128mb
-                  volumes:
-                    - "users-postgres:/var/lib/postgresql/data"
-                    - "./sql:/docker-entrypoint-initdb.d"
-                  networks:
-                    - "app-network"
-                  environment:
-                    POSTGRES_USER: ${POSTGRES_USER}
-                    POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
-                    POSTGRES_DB: ${POSTGRES_DB}
-                  env_file:
-                    - .env
-                  ports:
-                    - "5432:5432"
-                    
-          app:
-                  build:
-                      context: "./"
-                      dockerfile: dockerfile-app
-                  container_name: app
-                  restart: always
-                  networks:
-                    - "app-network"
-                  ports:
-                    - "3000:3000"
-                  depends_on:
-                    - "usersdb"
-                  
+  postgres:
+    image: postgres:16.2-alpine3.19
+    container_name: docunder-db
+    restart: always
+    shm_size: 128mb
+    volumes:
+      - "users-postgres:/var/lib/postgresql/data"
+    networks:
+      - db-network
+    environment:
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_DB: ${POSTGRES_DB}
+    healthcheck:
+      test: "pg_isready -U ${POSTGRES_USER} -d ${POSTGRES_DB}"
+      interval: 30s
+      timeout: 60s
+      retries: 5
+      start_period: 80s  
+    ports:
+      - ${DB_PORT}:5432
+            
+  backend:
+    build:
+        context: "./"
+    container_name: docunder-backend
+    restart: always
+    command: ./docker-entrypoint.sh
+    networks:
+      - docunder-network
+      - db-network
+    environment:
+      - DATABASE_URL
+      - JWT_SECRET
+      - NODE_ENV
+    ports:
+      - 3000:3000
+      - 5555:5555
+    depends_on:
+      - postgres
+
+  frontend:
+    build:
+        context: "../frontend-app/"
+    container_name: docunder-frontend
+    restart: always
+    networks:
+      - docunder-network
+    environment:
+      - API_ENDPOINT
+      - API_PORT
+      - PORT=3001
+    ports:
+      - 3001:3001
+    depends_on:
+      - backend
                     
 
                           
