--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -32,3 +32,7 @@ jobs:
         tags: |
           rodrigomolter/docunder-api:${{ steps.generate_sha.outputs.sha }}
           rodrigomolter/docunder-api:latest
+
+    - name: Trigger Deploy
+      run: |
+        curl ${{ secrets.RENDER_DEPLOY_HOOK_URL }}
