--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,10 @@ lerna-debug.log*
 /coverage
 /.nyc_output
 
+# Cypress
+cypress/screenshots
+cypress/videos
+
 # IDEs and editors
 /.idea
 .project
@@ -41,6 +45,7 @@ lerna-debug.log*
 .env.test.local
 .env.production.local
 .env.local
+cypress.env.json
 
 # temp directory
 .temp
