tests: new test suite for login/recover password/signup (#38)
* chore: add cypress to project

* test: login page tests

* test: more signup tests & refactor login tests

* chore: add cypress-plugin dependency

* test: move /e2e tests to /tests/e2e

* test(api): new tests for login trough api

* test: minor refactor

* test(api): add tests to the /user endpoint

* test(e2e): recover password tests

* test(api): recover password tests

--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,11 @@ lerna-debug.log*
 /coverage
 /.nyc_output
 
+# Cypress
+cypress/screenshots
+cypress/videos
+cypress/downloads
+
 # IDEs and editors
 /.idea
 .project
@@ -41,6 +46,7 @@ lerna-debug.log*
 .env.test.local
 .env.production.local
 .env.local
+cypress.env.json
 
 # temp directory
 .temp
