--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "start:docker": "prisma generate && prisma migrate deploy && node dist/src/main",
-    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
+    "lint": "eslint \"{src,apps,libs,test,cypress}/**/*.ts\"",
+    "lint:fix": "eslint \"{src,apps,libs,test,cypress}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
@@ -55,6 +56,8 @@
     "rxjs": "^7.8.1"
   },
   "devDependencies": {
+    "@eslint/eslintrc": "^3.1.0",
+    "@eslint/js": "^9.10.0",
     "@faker-js/faker": "^8.4.1",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
@@ -65,14 +68,16 @@
     "@types/passport-jwt": "^4.0.1",
     "@types/passport-local": "^1.0.38",
     "@types/supertest": "^6.0.0",
-    "@typescript-eslint/eslint-plugin": "^6.0.0",
-    "@typescript-eslint/parser": "^6.0.0",
+    "@typescript-eslint/eslint-plugin": "^8.6.0",
+    "@typescript-eslint/parser": "^8.6.0",
     "cypress": "^13.13.3",
     "cypress-plugin-api": "^2.11.2",
-    "eslint": "^8.42.0",
+    "eslint": "^9.10.0",
     "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-chai-friendly": "^1.0.1",
     "eslint-plugin-cypress": "^3.5.0",
     "eslint-plugin-prettier": "^5.0.0",
+    "globals": "^15.9.0",
     "jest": "^29.5.0",
     "prettier": "^3.0.0",
     "prisma": "^5.11.0",
