ci: added func to seed the database

--- a/.env.template
+++ b/.env.template
@@ -23,5 +23,11 @@ DB_PORT=5432
 NODE_ENV=development
 
 
+# This is used during the testing phase with Cypress
+# Also this is the data used in the seed function
+CYPRESS_USER_EMAIL="bianca@email.com"
+CYPRESS_USER_PASSWORD="Str3ss&Test"
+
+
 # DONT CHANGE
 DATABASE_URL=postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${DB_HOST}:${DB_PORT}/${POSTGRES_DB}?schema=public
