--- a/.github/workflows/run-tests-main.yaml
+++ b/.github/workflows/run-tests-main.yaml
@@ -4,7 +4,6 @@ on:
   push:
     branches:
       - dev
-      - test/login-tests
   pull_request:
     branches:
       - dev
@@ -20,6 +19,8 @@ jobs:
       DATABASE_URL: 'postgresql://postgres:postgres@localhost:5432/postgres?schema=public'
       API_ENDPOINT: localhost
       API_PORT: 3000
+      CYPRESS_USER_EMAIL: 'bianca@email.com'
+      CYPRESS_USER_PASSWORD: 'Str3ss&Test'
 
     services:
       postgres:
@@ -52,6 +53,10 @@ jobs:
         run: |
           npx prisma generate 
           npx prisma migrate deploy
+        working-directory: backend
+
+      - name: Seed the database
+        run: npx prisma db seed
         working-directory: backend
 
       - name: Starts Backend
