--- a/.github/workflows/build-push.yaml
+++ b/.github/workflows/build-push.yaml
@@ -1,81 +1,39 @@
-name: Run Tests on Dev Branch
-
+name: Builds Docker Image & Push to Docker Hub
 on:
   push:
     branches:
-      - dev
-  pull_request:
-    branches:
-      - dev
-    types: [opened, reopened, edited]
+      - main
 
 jobs:
-  eslint-and-cypress-tests:
-    runs-on: ubuntu-22.04
+  build-and-push:
+    name: 'Builds and push'
+    runs-on: ubuntu-latest
+    steps: 
+    - name: Checkout
+      uses: actions/checkout@v4
 
-    env:
-      JWT_SECRET: ${{ secrets.JWT_SECRET }}
-      NODE_ENV: development
-      DATABASE_URL: 'postgresql://postgres:postgres@localhost:5432/postgres?schema=public'
-      API_ENDPOINT: localhost
-      API_PORT: 3000
+    - name: Generate SHA
+      id: generate_sha
+      run: |
+        SHA=$(echo $GITHUB_SHA | head -c7)
+        echo "sha=$SHA" >> $GITHUB_OUTPUT
 
-    services:
-      postgres:
-        image: postgres:16.2-alpine3.19
-        env:
-          POSTGRES_USER: postgres
-          POSTGRES_PASSWORD: postgres
-          POSTGRES_DB: postgres
-        ports:
-          - 5432:5432
+    - name: Login to Docker Hub
+      uses: docker/login-action@v3
+      with:
+        username: ${{ secrets.DOCKERHUB_USERNAME }}
+        password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-    steps:
-      - name: Checkout Backend
-        uses: actions/checkout@v4
-        with:
-          path: backend
+    - name: Build and push Docker image
+      uses: docker/build-push-action@v6
+      with:
+        context: .
+        push: true
+        tags: |
+          rodrigomolter/docunder-api:${{ steps.generate_sha.outputs.sha }}
+          rodrigomolter/docunder-api:latest
 
-      - name: Install Backend Dependencies
-        run: npm ci
-        working-directory: backend
-        
-      - name: Run ESLint
-        run: npm run lint
-        working-directory: backend
-
-      - name: Wait for Postgres
-        run: wget -qO- https://raw.githubusercontent.com/eficode/wait-for/v2.2.4/wait-for | sh -s -- localhost:5432
-
-      - name: Migrate Database
-        run: |
-          npx prisma generate 
-          npx prisma migrate deploy
-        working-directory: backend
-
-      - name: Starts Backend
-        run: npm run start &
-        working-directory: backend
-
-      - name: Checkout Frontend
-        uses: actions/checkout@v4
-        with:
-          repository: Organizacao-Docunder/frontend-app
-          ref: dev
-          path: frontend
-
-      - name: Install Frontend Dependencies
-        run: npm ci
-        working-directory: frontend/nextjs-app 
-
-      - name: Build Frontend
-        run: npm run dev &
-        working-directory: frontend/nextjs-app
-
-      - name: Run end-to-end tests on Cypress
-        uses: cypress-io/github-action@v6
-        with:
-          install: false
-          command: npm run cypress
-          wait-on: 'http://localhost:3001'
-          working-directory: backend
+    - name: Trigger Deploy
+      if: success()
+      run: |
+        curl ${{ secrets.RENDER_DEPLOY_HOOK_URL }}
