--- a/.github/workflows/run-tests-main.yaml
+++ b/.github/workflows/run-tests-main.yaml
@@ -3,10 +3,10 @@ name: Run Tests on Main Branch
 on:
   push:
     branches:
-      - dev
+      - main
   pull_request:
     branches:
-      - dev
+      - main
     types: [opened, reopened, edited]
 
 jobs:
