chore: moving cypress env variables to .env

--- a/.env.template
+++ b/.env.template
@@ -25,8 +25,8 @@ NODE_ENV=development
 
 # This is used during the testing phase with Cypress
 # Also this is the data used in the seed function
-CYPRESS_USER_EMAIL="bianca@email.com"
-CYPRESS_USER_PASSWORD="Str3ss&Test"
+CYPRESS_USER_EMAIL="teste@email.com"
+CYPRESS_USER_PASSWORD="S3cr3tP@ssw0rd"
 
 
 # DONT CHANGE
