fix: prisma schema path with dockercompose (#41)
* fix: adjusting prisma.schema path on docker

* fix: adjusting docker-entrypoint.sh path

* fix: upgrade backend command on dockercompose

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -35,7 +35,7 @@ services:
         context: "./"
     container_name: docunder-backend
     restart: always
-    command: ./docker-entrypoint.sh
+    command: sh /app/docker-entrypoint.sh
     networks:
       - docunder-network
       - db-network
