--- a/.github/workflows/run-tests-dev.yaml
+++ b/.github/workflows/run-tests-dev.yaml
@@ -64,7 +64,7 @@ jobs:
         working-directory: backend
 
       - name: Starts Backend
-        run: npm run start:prod
+        run: npm run start:prod &
         working-directory: backend
 
       - name: Checkout Frontend
@@ -83,7 +83,7 @@ jobs:
         working-directory: frontend/nextjs-app
 
       - name: Start Frontend
-        run: npm run start
+        run: npm run start &
         working-directory: frontend/nextjs-app
 
       - name: Run end-to-end tests on Cypress
