--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "start": "nest start",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
-    "start:prod": "node dist/main",
+    "start:prod": "node dist/src/main",
     "db:migrate": "prisma generate && prisma migrate dev",
     "lint": "eslint \"{src,apps,libs,test,cypress}/**/*.ts\"",
     "lint:fix": "eslint \"{src,apps,libs,test,cypress}/**/*.ts\" --fix",
